back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
spec:
  selector:
    matchLabels:
      app: back1
  replicas: 1
  template:
    metadata:
      labels:
        app: back1
    spec:
      volumes:
      - name: databack
        emptyDir: {}
      containers:
      - name: backend1
        image:  backend
        ports:
        - containerPort: 1323
        volumeMounts:
        - mountPath: ./data/back
          name: databack
