back-deployment2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service2
  labels:
    app: backend-service1
spec:
  ports:
    - port: 1323
      protocol: TCP
      targetPort: 1323
  selector:
    app: back2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
spec:
  selector:
    matchLabels:
      app: back2
  replicas: 1
  template:
    metadata:
      labels:
        app: back2
    spec:
      volumes:
      - name: databack
        emptyDir: {}
      containers:
      - name: backend2
        image:  lucina101/sds-final-backend:latest
        ports:
        - containerPort: 1323
        volumeMounts:
        - mountPath: ./data/back
          name: databack
