back-deployment3.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service3
  labels:
    app: backend-service3
spec:
  ports:
    - port: 1325
      protocol: TCP
      targetPort: 1325
  selector:
    app: back3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment3
spec:
  selector:
    matchLabels:
      app: back3
  strategy:
    type: Recreate
  replicas: 2
  template:
    metadata:
      labels:
        app: back3
    spec:
      # volumes:
      # - name: databack
      #   emptyDir: {}
      containers:
      - name: backend3
        image:  lucina101/sds-final-backend3:latest
        ports:
        - containerPort: 1325
        # volumeMounts:
        # - mountPath: ./data/back
        #   name: databack
      tolerations:
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10
