db-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app: db-service
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
      - name: persistent-redis-volume
        persistentVolumeClaim:
          claimName: redis-volume-claim
      containers:
      - name: db
        image:  redis
        command: ["redis-server"]
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /var/lib/redis
          name: persistent-redis-volume
      tolerations:
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10
