front-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-service
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      nodePort: 30050
  selector:
    app: front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  selector:
    matchLabels:
      app: front
  replicas: 1
  template:
    metadata:
      labels:
        app: front
    spec:
      volumes:
      - name: datafront
        emptyDir: {}
      containers:
      - name: frontend
        image:  lucina101/sds-final-frontend:latest
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /data/front
          name: datafront
