ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: ingress-front

  annotations:

spec:

 # ingressClassName: traefik

  rules:

    - host: localhost

      http:

        paths:

          - path: "/"

            pathType: Prefix

            backend:

              service:

                name: frontend-service

                port:

                  number: 3000
